# DSA-CheatSheet

./: README.md  pyproject.toml
docs/: BuiltIn_Data_Structures.md  Read More On.md
solutions/data_structures/: builtin_data_structures.py
